--- a/src/app/Components/nav-bar/nav-bar.component.css
+++ b/src/app/Components/nav-bar/nav-bar.component.css
@@ -41,3 +41,51 @@
     
 }
 /*Nav bar styles ends*/
+
+/*Notification sistem starts*/
+
+li.right{
+    list-style: none;
+}
+
+.dropdown-container.expanded .dropdown {
+  -webkit-animation: fadein .5s;
+  -moz-animation: fadein .5s;
+  -ms-animation: fadein .5s;
+  -o-animation: fadein .5s;
+  animation: fadein .5s;
+  display: block;
+}
+.dropdown-container .dropdown {
+  -webkit-animation: fadeout .5s;
+  -moz-animation: fadeout .5s;
+  -ms-animation: fadeout .5s;
+  -o-animation: fadeout .5s;
+  animation: fadeout .5s;
+  display: none;
+  position: absolute;
+  width: 300px;
+  height: auto;
+  max-height: 600px;
+  overflow-y: hidden;
+  padding: 0;
+  margin: 0;
+  background: #eee;
+  margin-top: 3px;
+  margin-right: -15px;
+  border-top: 4px solid #ff5252;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  -webkit-box-shadow: 2px 2px 15px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 2px 15px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 2px 15px -5px rgba(0, 0, 0, 0.75);
+ 
+}
+
+#notificationMenu{
+    z-index: 1;
+    margin-right: 1px;
+    margin-top: 27px;
+}
+
+/******************************************/
