--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -53,7 +53,9 @@
                                     href="#">Eliminar*</a>
                             </ul>
                         </li>
-                        <li><a class="dropdown-item titles" href="#">Pedidos</a></li>
+                        <li>
+                            <a class="dropdown-item titles" href="#">Pedidos</a>
+                        </li>
                         <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles"
                                 data-toggle="dropdown" href="#">Finanzas</a>
                             <ul class="dropdown-menu">
@@ -63,9 +65,8 @@
                                     href="#">Registro</a>
                             </ul>
                         </li>
-
-                        <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles"
-                                data-toggle="dropdown" href="#">Despacho</a>
+                        <li class="dropdown-submenu dropleft">
+                            <a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown" href="#">Despacho</a>
                             <ul class="dropdown-menu">
                                 <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">A</a>
@@ -75,6 +76,41 @@
                         </li>
                     </ul>
                 </li>
+
+                <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+                <li class="right pl-3">
+                    <!--span class="notification-label"></span-->
+                    <div class="dropdown-container">
+                        <a href="#" data-dropdown="notificationMenu" class="menu-link has-notifications circle">
+                            <img src="../../../assets/Iconos/notifications_none-24px.svg" class="img-fluid" alt="puede contener una campana">
+                        </a>
+                        <ul class="dropdown" name="notificationMenu" id="notificationMenu">
+                            <li class="notification-group">
+                                <div >
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                                          Cras justo odio
+                                          <span class="badge badge-danger badge-pill">14</span>
+                                        </li>
+                                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                                          Dapibus ac facilisis in
+                                          <span class="badge badge-warning badge-pill">2</span>
+                                        </li>
+                                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                                          Morbi leo risus
+                                          <span class="badge badge-primary badge-pill">1</span>
+                                        </li>
+                                      </ul>
+                                </div>
+                                <!-- tab -->
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            
+                
+                <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+
 
 
                 <picture>
