--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item px-3">
-                        <a routerLink="/createEmployees" routerLinkActive="active" class="nav-link titles"
+                        <a routerLink="/employees" routerLinkActive="active" class="nav-link titles"
                             href="#">Empleados</a>
                     </li>
                     <li class="nav-item px-3">
@@ -43,13 +43,13 @@
                         <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles"
                                 data-toggle="dropdown" href="#">Empleados</a>
                             <ul class="dropdown-menu">
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Crear Empleado</a>
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Ver Empleado</a>
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Modificar</a>
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Eliminar*</a>
                             </ul>
                         </li>
@@ -59,18 +59,18 @@
                         <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles"
                                 data-toggle="dropdown" href="#">Finanzas</a>
                             <ul class="dropdown-menu">
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Finanzas</a>
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">Registro</a>
                             </ul>
                         </li>
                         <li class="dropdown-submenu dropleft">
                             <a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown" href="#">Despacho</a>
                             <ul class="dropdown-menu">
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">A</a>
-                                <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles"
+                                <a routerLink="/employees" routerLinkActive="active" class="dropdown-item titles"
                                     href="#">b</a>
                             </ul>
                         </li>
