--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -25,11 +25,11 @@
                   <h3 id="titles" class="mt-2 titles ">Empleados</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Crear Empleado</a></li>
-                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Ver Empleados
+                    <li class="list-group-item titles"><a routerLink="/employees" href="#">Crear Empleado</a></li>
+                    <li class="list-group-item titles"><a routerLink="/employees" href="#">Ver Empleados
                         (CC/Todos)</a></li>
-                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Modificar</a></li>
-                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Eliminar*</a></li>
+                    <li class="list-group-item titles"><a routerLink="/employees" href="">Modificar</a></li>
+                    <li class="list-group-item titles"><a routerLink="/employees" href="">Eliminar*</a></li>
                   </ul>
 
                 </div>
