--- a/src/app/Components/News/create-new-release/create-new-release.component.css
+++ b/src/app/Components/News/create-new-release/create-new-release.component.css
@@ -1,41 +1,18 @@
 
-#leftMenu{
-    background: #f8f9fa;
-    height: auto;
-    width: auto;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
-.list-group-item{
-    border: none;
-    background: transparent;
-}
-
-#icons, #titles{
-    vertical-align: middle;
-    display: inline-block;
-}
-#titles{
-    margin: auto;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
 
 /**/
 @font-face {
     font-family: "helveticaNowMicro-Regular";
-    src: url("../../../assets/Fonts/HelveticaNowMicro-Regular.otf");
+    src: url("../../../../assets/Fonts/HelveticaNowMicro-Regular.otf");
   }
 
 @font-face {
     font-family: "Mark-bold";
-    src: url("../../../assets/Fonts/Mark-Bold.ttf");
+    src: url("../../../../assets/Fonts/Mark-Bold.ttf");
   }
 
   .verticalCenter {
-    min-height: 100%;  
+    height: 90vh;  
     min-height: 100%; 
     display: flex;
     align-items: center;
@@ -61,9 +38,7 @@
     margin: 2rem 0rem 3rem 0rem;
     font-weight: bolder;
 }
-#logoLadrillera{
-    margin: 1rem 0rem 3rem 0rem;
-}
+
 .form-control{
     outline: none;
     border-width: 0 0 2px;
