--- a/src/app/Components/create-employee/employee/create-employee.component.html
+++ b/src/app/Components/create-employee/employee/create-employee.component.html
@@ -8,15 +8,13 @@
                     <div class="input-group mb-4 px-5">
                         <div class="form-row align-items-center">
                             <div class="col-6 my-1">
-                                <input type="text" name="nombre" class="form-control titles"
-                                    placeholder="Nombres" formControlName="nombres"
-                                    [class.is-invalid]="nombresNoValido"
+                                <input type="text" name="nombre" class="form-control titles" placeholder="Nombres"
+                                    formControlName="nombres" [class.is-invalid]="nombresNoValido"
                                     [class.is-valid]="nombresValido">
                             </div>
                             <div class="col-6 my-1">
-                                <input type="text" name="apellidos" class="form-control titles"
-                                    placeholder="Apellidos" formControlName="apellidos"
-                                    [class.is-invalid]="apellidosNoValido"
+                                <input type="text" name="apellidos" class="form-control titles" placeholder="Apellidos"
+                                    formControlName="apellidos" [class.is-invalid]="apellidosNoValido"
                                     [class.is-valid]="apellidosValido">
                             </div>
                         </div>
@@ -24,16 +22,14 @@
                     <div class="input-group mb-4 px-5">
                         <div class="form-row align-items-center">
                             <div class="col-md-12 col-lg-7 my-3">
-                                <input type="text" minlength="10" name="text"
-                                    class="form-control titles" placeholder="C.C."
-                                    formControlName="cedula_ciudadania"
+                                <input type="text" minlength="10" name="text" class="form-control titles"
+                                    placeholder="C.C." formControlName="cedula_ciudadania"
                                     [class.is-invalid]="cedula_ciudadaniaNoValido"
                                     [class.is-valid]="cedula_ciudadaniaValido">
                             </div>
                             <div class="col-md-12 col-lg-5 my-1">
                                 <select class="form-control titles" formControlName="genero"
-                                    [class.is-invalid]="generoNoValido"
-                                    [class.is-valid]="generoValido">
+                                    [class.is-invalid]="generoNoValido" [class.is-valid]="generoValido">
                                     <option value="" selected disabled>Genero</option>
                                     <option value="M">Hombre</option>
                                     <option value="F">Mujer</option>
@@ -43,8 +39,7 @@
                     </div>
                     <div class="input-group mb-2 px-5 text-center">
                         <div class="form-group  row">
-                            <label for="example-date-input"
-                                class="col-md-12 col-lg-4 col-form-label titles">Fecha de
+                            <label for="example-date-input" class="col-md-12 col-lg-4 col-form-label titles">Fecha de
                                 nacimiento: </label>
                             <div class="col-md-12 mt-2 col-lg-8">
                                 <input class="form-control titles" type="date" value="2011-08-19"
@@ -55,30 +50,26 @@
                         </div>
                     </div>
                     <div class="input-group mb-4 px-5">
-                        <select class="form-control titles" formControlName="rol"
-                            [class.is-invalid]="rolNoValido" [class.is-valid]="rolValido">
+                        <select class="form-control titles" formControlName="rol" [class.is-invalid]="rolNoValido"
+                            [class.is-valid]="rolValido">
                             <option value="" selected disabled>Rol</option>
                             <option value="developer">Developer</option>
                         </select>
                     </div>
                     <div autocomplete="off" class="input-group mb-4 px-5">
-                        <input type="mail" minlength="3" name="email" class="form-control titles"
-                            placeholder="Correo" formControlName="email"
-                            [class.is-invalid]="emailNoValido" [class.is-valid]="emailValido">
+                        <input type="mail" minlength="3" name="email" class="form-control titles" placeholder="Correo"
+                            formControlName="email" [class.is-invalid]="emailNoValido" [class.is-valid]="emailValido">
                     </div>
                     <div autocomplete="off" class="input-group mb-4 px-5">
-                        <input type="password" minlength="3" name="password"
-                            class="form-control titles" placeholder="Password"
-                            formControlName="password" [class.is-invalid]="passwordNoValido"
+                        <input type="password" minlength="3" name="password" class="form-control titles"
+                            placeholder="Password" formControlName="password" [class.is-invalid]="passwordNoValido"
                             [class.is-valid]="passwordValido">
                     </div>
                     <div class="form-group mb-4 px-5">
                         <label for="exampleFormControlFile1" class="titles">Ingresar foto
                             empleado</label>
-                        <input type="file" class="form-control titles-file titles text-wrap"
-                            formControlName="photoFile"
-                            (change)="handleFileInput($event.target.files)"
-                            [class.is-invalid]="photoFiledNoValido"
+                        <input type="file" class="form-control titles-file titles text-wrap" formControlName="photoFile"
+                            (change)="handleFileInput($event.target.files)" [class.is-invalid]="photoFiledNoValido"
                             [class.is-valid]="photoFileValido">
                     </div>
                     <!--Modulos disponibles-->
@@ -86,10 +77,9 @@
                         <div class="form-check form-check-inline"
                             *ngFor="let control of modulos.controls; let i = index">
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" [formControlName]="i"
-                                    class="custom-control-input" id={{modulesName[i]}}>
-                                <label class="custom-control-label titles"
-                                    for={{modulesName[i]}}>{{modulesName[i]}}
+                                <input type="checkbox" [formControlName]="i" class="custom-control-input"
+                                    id={{modulesName[i]}}>
+                                <label class="custom-control-label titles" for={{modulesName[i]}}>{{modulesName[i]}}
                                 </label>
                             </div>
                         </div>
