--- a/src/app/Pages/news/news.component.html
+++ b/src/app/Pages/news/news.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-2">
+        <div id="leftMenu" class="col-2">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
                     aria-controls="v-pills-home" aria-selected="true">
                     <img src="../../../assets/Iconos/noun_Plus_1886659.svg" width="30" height="30"
                         class="d-inline-block pr-2" alt="" loading="lazy"><span>Crear
-                        Empleado</span></a>
+                        actualización</span></a>
                 <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
                     aria-controls="v-pills-profile" aria-selected="false">
                     <img src="../../../assets/Iconos/noun_Eye_1853787.svg" width="30" height="30"
@@ -27,7 +27,7 @@
                 <!--panel-1-->
                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                     aria-labelledby="v-pills-home-tab">
-                    <app-create-employee></app-create-employee>
+                    <app-create-new-release></app-create-new-release>
                 </div>
                 <!--panel-1 ends-->
                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
