--- a/src/app/Components/Client/search-client/search-client.component.css
+++ b/src/app/Components/Client/search-client/search-client.component.css
@@ -12,7 +12,7 @@
   }
 
   .verticalCenter {
-    min-height: 100%;  
+    height: 90vh;  
     min-height: 100%; 
     display: flex;
     align-items: center;
@@ -38,9 +38,7 @@
     margin: 2rem 0rem 3rem 0rem;
     font-weight: bolder;
 }
-#logoLadrillera{
-    margin: 1rem 0rem 3rem 0rem;
-}
+
 .form-control{
     outline: none;
     border-width: 0 0 2px;
@@ -59,10 +57,28 @@
     box-shadow: none;
     font-family: "helveticaNowMicro-Regular";
 }
-.btn{
-    background: red;
-    color: white;
-    border-radius: 10px;
-    padding: 6px 32px 6px 32px;
-}
 
+
+
+@media (max-width: 600px) {
+    .container-fluid {
+        margin-top: 1rem;
+    }
+  }
+
+  @media (max-width: 320px) {
+    .container-fluid {
+        margin-top: 0px;
+    }
+    #titleLogin{
+        margin: 1rem 0rem 1rem 0rem;
+    }
+  }
+  @media (max-width: 992px) {
+    #leftMenuItems{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+  }
