--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -45,7 +45,7 @@
                   <h3 id="titles" class="mt-2 titles">Pedidos</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a href="">Crear Pedidos</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/client">Crear Pedidos</a> </li>
                     <li class="list-group-item titles"><a href="">Ver pedidos</a> </li>
                     <li class="list-group-item titles"><a href="">Ver reportes</a> </li>
                     <li class="list-group-item titles"><a href="">Modificar pedidos</a> </li>
