Cambios vista de montar pedido sin logica

--- a/src/app/Components/Orders/create-order/create-order.component.css
+++ b/src/app/Components/Orders/create-order/create-order.component.css
@@ -65,3 +65,10 @@ background-color: white;
 border-radius: 25%;
 }
 
+#total{
+    margin-right: 100px;
+}
+
+#labelSell{
+    border: 2px solid black;
+}
