--- a/src/app/Components/Orders/create-order/create-order.component.html
+++ b/src/app/Components/Orders/create-order/create-order.component.html
@@ -9,87 +9,85 @@
                     <tr id="tbHead">
                         <th class="titles" id="tbHeadLeft">Codigo Producto</th>
                         <th class="titles separator">Nombre</th>
-                        <th class="titles separator">Descripción</th>
                         <th class="titles separator">Cantidad</th>
                         <th class="titles separator">Medida</th>
+                        <th class="titles separator">Valor de venta</th>
                         <th class="titles separator" id="tbHeadRight">
                             <img src="../../../../assets/Iconos/notebook.png" height="30px" alt="">
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tRow">
-                        <th class="text" scope="row">MADKO-23PULG</th>
-                        <td class="text">MATCO</td>
-                        <td class="text">Ladrillo Matco,23 pulg</td>
-                        <td class="text">100.000</td>
-                        <td class="text">Unidades</td>
+                    <tr class="tRow" *ngFor="let i of products">
+                        <th class="text" scope="row">{{i.codigo}}</th>
+                        <td class="text">{{i.nombre}}</td>
+                        <td class="text"><input type="number" class="form-control text-center"></td>
+                        <td class="text">
+                            <select class="form-control" name="Medida" id="">
+                                <option class="form-control" disabled selected value="">Selecciona una medida</option>
+                                <option class="form-control" *ngFor="let j of i.medida" value={{j}}>
+                                    {{j}}</option>
+                            </select></td>
+                        <td class="text"><input type="number" class="form-control text-center"></td>
                         <td class="text" id="lastElement">
                             <div class="rounded circle">
                                 <img src="../../../../assets/Iconos/money.svg" height="30px" alt="">
                             </div>
                         </td>
                     </tr>
-                    <tr class="tRow">
-                        <th class="text test" scope="row">MADKO-23PULG</th>
-                        <td class="text test">MATCO</td>
-                        <td class="text">Ladrillo Matco,23 pulg</td>
-                        <td class="text">100.000</td>
-                        <td class="text">Unidades</td>
-                        <td class="text">
-                            <img src="../../../../assets/Iconos/money.svg" height="30px" alt="">
-                        </td>
-                    </tr>
-                    <tr class="tRow">
-                        <th class="text" scope="row">MADKO-23PULG</th>
-                        <td class="text">MATCO</td>
-                        <td class="text">Ladrillo Matco,23 pulg</td>
-                        <td class="text">100.000</td>
-                        <td class="text">Unidades</td>
-                        <td class="text">
-                            <img src="../../../../assets/Iconos/money.svg" height="30px" alt="">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
+
         </div>
     </div>
-</div>
+    <div class="row d-flex justify-content-end">
+        <div class="col-4" id="total">
+            <div class="form-group row">
+                <label for="sellAmount" id="labelSell" class="col-3 col-form-label text-center titles">Venta Total</label>
+                <div class="col">
+                    <input type="text" readonly class="form-control text-center" id="sellAmount"
+                        value="Precio total del pedido actual">
+                </div>
+            </div>
 
-<div class="fixed-bottom py-4">
-    <div class="container-fluid">
-        <div class="row">
+        </div>
+    </div>
 
-            <div class="col-10 offset-2">
-                <form>
-                    <div class="form-row text-center">
-                        <div class="col-6">
-                            <div class="form-group row">
-                                <label for="staticEmail" class="col-sm-2 col-form-label titles">Cliente</label>
-                                <div class="col-sm-10">
-                                    <input type="text"  class="form-control" id="staticEmail"
-                                        placeholder="Dinos el nombre del cliente">
+    <div class="fixed-bottom py-4">
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="col-10 offset-2">
+                    <form>
+                        <div class="form-row text-center">
+                            <div class="col-6">
+                                <div class="form-group row">
+                                    <label for="clientName" class="col-sm-2 col-form-label titles">Cliente</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control text-center" disabled id="clientName"
+                                            placeholder="Nombre del cliente">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="form-group row">
+                                    <label for="deliveryDate" class="col-sm-3 col-form-label titles">Fecha de
+                                        entrega</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="deliveryDate"
+                                            placeholder="Cúal sera la fecha de entrega">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <div class="form-group row">
-                                <label for="staticEmail" class="col-sm-3 col-form-label titles">Fecha de entrega</label>
-                                <div class="col-sm-9">
-                                    <input type="text"  class="form-control" id="staticEmail"
-                                    placeholder="Cúal sera la fecha de entrega">
-                                </div>
+                        <div class="row">
+                            <div class="col text-center">
+                                <button class="btn btn-danger text">Continuar</button>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <button class="btn btn-danger text">Continuar</button>
-                        </div>
-                    </div>
 
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
