--- a/src/app/Pages/accounting/accounting.component.html
+++ b/src/app/Pages/accounting/accounting.component.html
@@ -27,11 +27,11 @@
                 <!--panel-1-->
                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                     aria-labelledby="v-pills-home-tab">
-                    <app-create-order></app-create-order>
+                    <app-request></app-request>
                 </div>
                 <!--panel-1 ends-->
                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                    <app-search-order></app-search-order>
+                    ...
                 </div>
                 <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                     ...</div>
